--- a/recipes/onigiri.html
+++ b/recipes/onigiri.html
@@ -2,7 +2,7 @@
 
     <h1 header="header">Onigiri</h1>
 
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8230625.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="japanese rice balls" style:width:120px;height:220px>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8230625.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="japanese rice balls" style:"width:120px;height:220px">
 
     <b><h2>A Traditional Japanese Cuisine!</h2></b>
 
